--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -100,6 +100,24 @@ services:
       - --gcs
       - gs://pictmanager
       - images
+  random:
+    profiles: [dummy]
+    image: golang:1.20.4-bullseye
+    environment:
+      - http_proxy
+      - https_proxy
+      - no_proxy=storage,firestore,${no_proxy:-}
+      - CLOUDSDK_CORE_PROJECT=pictmanager
+      - FIRESTORE_EMULATOR_HOST=firestore:8080
+    volumes:
+      - .:/app
+    working_dir: /app
+    depends_on:
+      - firestore
+    command:
+      - go
+      - run
+      - ./cmd/random
   terraform:
     profiles: [dummy]
     image: hashicorp/terraform:1.4.6
